Add required prop to support join-monster

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "graphql": "^0.2.5",
     "inquirer": "^0.9.0",
     "knex": "^0.8.6",
+    "locutus": "^2.0.8",
     "lodash": "^3.10.0",
     "mkdirp": "^0.5.1",
     "mysql": "^2.8.0",
